--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,18 +15,22 @@
  */
 
  body{
-    background: #353535;
-    font-family: Helvetica;
-    color: #f4f5f6;
-  }
-  button, input[type=submit]{
-    cursor: pointer;
-  }
-  
-  * {
-    padding: 0;
-    margin: 0;
-    position: relative;
-    box-sizing: border-box;
-  }
-  
+  background: #fff;
+  font-family: Helvetica;
+  color: #f4f5f6;
+}
+
+html, body {
+padding: 0;
+margin: 0;
+}
+button, input[type=submit]{
+cursor: pointer;
+}
+
+
+* {
+padding: 0;
+margin: 0;
+box-sizing: border-box;
+}
