chore: :rotating_light: prettier

--- a/app/javascript/components/header.module.scss
+++ b/app/javascript/components/header.module.scss
@@ -57,15 +57,13 @@
     flex-shrink: 0;
     overflow: hidden;
     padding: 20px;
-
-
   }
 
   .logo {
     font-size: 30px;
     font-family: sans-serif;
     font-weight: 900;
-    font-family: "Baloo Bhaina", cursive;
+    font-family: 'Baloo Bhaina', cursive;
 
     .crank {
       color: #25cb68;
