--- a/app/javascript/pages/project/project-details.module.scss
+++ b/app/javascript/pages/project/project-details.module.scss
@@ -1,242 +1,225 @@
 .bg_white {
-    background: #F8F8F9!important;
-
+  background: #f8f8f9 !important;
 }
 
-.f_image{
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 540px;
-    flex: 0 0 540px;
-    margin-top: 0 !important;
+.f_image {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 540px;
+  flex: 0 0 540px;
+  margin-top: 0 !important;
 
-    padding: 0 35px;
+  padding: 0 35px;
 
-    .image {
-        max-width: 100%;
-        height: auto;
-    
-    }
+  .image {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
-.contribute{
-    font-family: 'Montserrat';
-    display: inline-block;
-    height: 42px;
-    padding: 0 30px;
-    text-align: center;
-    font-size: 12px;
-    font-weight: 600;
-    line-height: 40px;
-    letter-spacing: 2px;
-    margin: 20px 0;
-    text-transform: uppercase;
-    text-decoration: none !important;
-    white-space: nowrap;
-    cursor: pointer;
-    background-color: transparent;
-    background: #1e266d;
-    color: #FFFFFF;
-    border: 1px solid #1e266d;
-    border-radius: 50px;
-    box-sizing: border-box;
-    -webkit-transition: 0.2s;
-    -moz-transition: 0.2s;
-    transition: 0.2s;
+.contribute {
+  font-family: 'Montserrat';
+  display: inline-block;
+  height: 42px;
+  padding: 0 30px;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 40px;
+  letter-spacing: 2px;
+  margin: 20px 0;
+  text-transform: uppercase;
+  text-decoration: none !important;
+  white-space: nowrap;
+  cursor: pointer;
+  background-color: transparent;
+  background: #1e266d;
+  color: #ffffff;
+  border: 1px solid #1e266d;
+  border-radius: 50px;
+  box-sizing: border-box;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
 
-    margin: 20px 0 0 0;
-
+  margin: 20px 0 0 0;
 }
 
 .subtitle {
-    font-size: 13px !important;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color: #607d9c;
-    line-height: 1.3;
-
+  font-size: 13px !important;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #607d9c;
+  line-height: 1.3;
 }
 .title {
-    font-weight: 600;
-    color: #445555;
-    line-height: 1.4;
-    font-size: 30px !important;
-
+  font-weight: 600;
+  color: #445555;
+  line-height: 1.4;
+  font-size: 30px !important;
 }
 
 .description {
-    letter-spacing: 0.01em;
-    color: #818198;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    font-size: 17px !important;
-    font-weight: 400 !important;
-    color: rgba(0, 0, 0, 0.5);
-    line-height: 1.6;
-    margin-top: 20px;
+  letter-spacing: 0.01em;
+  color: #818198;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  font-size: 17px !important;
+  font-weight: 400 !important;
+  color: rgba(0, 0, 0, 0.5);
+  line-height: 1.6;
+  margin-top: 20px;
 }
 .ft_single {
-    position: relative;
-    padding: 100px 0 100px 0;
-    background: #1e266d;
-    display: flex;
-    justify-content: center;
-    .container {
-        max-width: 1140px;
-        .yd_flex {
-            position: relative;
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            text-align: left;
-            -webkit-box-align: center;
-            -ms-flex-align: center;
-            align-items: center;
-           .yd_flex_1{
-            -webkit-box-flex: 1;
-            -ms-flex: 1;
-            flex: 1;    
-            
-            .flex_content{
-                max-width: 420px;
-                margin: 0;
+  position: relative;
+  padding: 100px 0 100px 0;
+  background: #1e266d;
+  display: flex;
+  justify-content: center;
+  .container {
+    max-width: 1140px;
+    .yd_flex {
+      position: relative;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      text-align: left;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      .yd_flex_1 {
+        -webkit-box-flex: 1;
+        -ms-flex: 1;
+        flex: 1;
 
-                h2 {
-                    font-size: 28px;
-                    font-weight: 600;
-                    line-height: 1.4;
-                    color: #364655;
-                    color: #FFFFFF;
-                    margin-bottom: 15px;
-                
-                    font-size: 30px;
+        .flex_content {
+          max-width: 420px;
+          margin: 0;
 
-                }
+          h2 {
+            font-size: 28px;
+            font-weight: 600;
+            line-height: 1.4;
+            color: #364655;
+            color: #ffffff;
+            margin-bottom: 15px;
 
-                p{
-                    font-size: 16px;
-                    font-weight: 500;
-                    line-height: 1.6;
-                    color: rgba(255, 255, 255, 0.7);
-                    margin-bottom: 5px;
-                }
-                
-                
-                
+            font-size: 30px;
+          }
 
+          p {
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 1.6;
+            color: rgba(255, 255, 255, 0.7);
+            margin-bottom: 5px;
+          }
 
-                .btn_action {
-                    font-family: 'Montserrat';
-                    display: inline-block;
-                    height: 42px;
-                    padding: 0 30px;
-                    text-align: center;
-                    font-size: 12px;
-                    font-weight: 600;
-                    line-height: 40px;
-                    letter-spacing: 2px;
-                    margin: 20px 0;
-                    text-transform: uppercase;
-                    text-decoration: none !important;
-                    white-space: nowrap;
-                    cursor: pointer;
-                    background-color: transparent;
-                    background: #1e266d;
-                    color: #FFFFFF;
-                    border: 1px solid #1e266d;
-                    border-radius: 50px;
-                    box-sizing: border-box;
-                    -webkit-transition: 0.2s;
-                    -moz-transition: 0.2s;
-                    transition: 0.2s;
-                
-                }
+          .btn_action {
+            font-family: 'Montserrat';
+            display: inline-block;
+            height: 42px;
+            padding: 0 30px;
+            text-align: center;
+            font-size: 12px;
+            font-weight: 600;
+            line-height: 40px;
+            letter-spacing: 2px;
+            margin: 20px 0;
+            text-transform: uppercase;
+            text-decoration: none !important;
+            white-space: nowrap;
+            cursor: pointer;
+            background-color: transparent;
+            background: #1e266d;
+            color: #ffffff;
+            border: 1px solid #1e266d;
+            border-radius: 50px;
+            box-sizing: border-box;
+            -webkit-transition: 0.2s;
+            -moz-transition: 0.2s;
+            transition: 0.2s;
+          }
 
-                .btn_alt {
-                    background: #23D3D3;
-                    color: #040e1a !important;
-                    border: 1px solid #23D3D3 !important;
-                
-                }
-            }
-           }
-
-           .yd_flex_2{
-            -webkit-box-ordinal-group: 2;
-            -ms-flex-order: 1;
-            order: 1;
-
-            
-            -webkit-box-flex: 0;
-            -ms-flex: 0 0 568px;
-            flex: 0 0 568px;
-
-            .flex_main{
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-            
-                display: flex;
-
-                .flex_sub{
-                    align-items: center;
-                    flex-basis: calc(50% - 24px);
-                    flex-direction: column;
-                    justify-content: center;
-                    margin: 0;
-                    padding: 15px 10px;
-                    position: relative;
-                    background: rgb(248, 249, 250);
-                    background: #1e266d;
-                    border: 1px solid rgba(255, 255, 255, 0.1);
-                    border-radius: 1px;
-                    display: flex;
-                    cursor: pointer;
-                    margin-bottom: 0;
-                    transition: box-shadow .3s ease-in-out;
-                
-                    margin: 0;
-                    padding: 32px;
-                
-                    .sub_image{
-                        margin: 0px 0 20px;
-img {
-    width: 60px;
-    height: 60px;
-
-}
-
-.size_xl{
-    font-size: 64px;
-}
-                    }
-
-                    .sub_text{
-                        text-align: center;
-h4 {
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 1.2;
-    color: rgba(255, 255, 255, 0.9);
-    margin-bottom: 5px;
-
-    font-size: 16px;
-
-}
-
-p{
-    font-size: 13px;
-    font-weight: 500;
-    line-height: 1.4;
-    color: rgba(255, 255, 255, 0.7);
-    margin: 5px 0;
-
-}
-                    }
-                }
-            }
-        
-           }
+          .btn_alt {
+            background: #23d3d3;
+            color: #040e1a !important;
+            border: 1px solid #23d3d3 !important;
+          }
         }
+      }
+
+      .yd_flex_2 {
+        -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+        order: 1;
+
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 568px;
+        flex: 0 0 568px;
+
+        .flex_main {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+
+          display: flex;
+
+          .flex_sub {
+            align-items: center;
+            flex-basis: calc(50% - 24px);
+            flex-direction: column;
+            justify-content: center;
+            margin: 0;
+            padding: 15px 10px;
+            position: relative;
+            background: rgb(248, 249, 250);
+            background: #1e266d;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 1px;
+            display: flex;
+            cursor: pointer;
+            margin-bottom: 0;
+            transition: box-shadow 0.3s ease-in-out;
+
+            margin: 0;
+            padding: 32px;
+
+            .sub_image {
+              margin: 0px 0 20px;
+              img {
+                width: 60px;
+                height: 60px;
+              }
+
+              .size_xl {
+                font-size: 64px;
+              }
+            }
+
+            .sub_text {
+              text-align: center;
+              h4 {
+                font-size: 14px;
+                font-weight: 600;
+                line-height: 1.2;
+                color: rgba(255, 255, 255, 0.9);
+                margin-bottom: 5px;
+
+                font-size: 16px;
+              }
+
+              p {
+                font-size: 13px;
+                font-weight: 500;
+                line-height: 1.4;
+                color: rgba(255, 255, 255, 0.7);
+                margin: 5px 0;
+              }
+            }
+          }
+        }
+      }
     }
+  }
 }
