feat: :construction: wip

--- a/app/javascript/components/footer.module.scss
+++ b/app/javascript/components/footer.module.scss
@@ -1,5 +1,6 @@
 .container {
   background-color: #1e266d;
+  color: #fff;
   font-family: Menlo, monospace;
   padding: 35px 0;
   border-top: 2px solid #2e2d72;
