--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,23 +14,67 @@
  *= require_self
  */
 
- body{
+html {
+  font-size: 12px;
+}
+
+body {
   background: #fff;
   font-family: Helvetica;
-  color: #f4f5f6;
+  color: #020508;
 }
 
-html, body {
-padding: 0;
-margin: 0;
+button,
+input[type='submit'] {
+  cursor: pointer;
 }
-button, input[type=submit]{
-cursor: pointer;
-}
-
 
 * {
-padding: 0;
-margin: 0;
-box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  transition: ease 0.3s;
+  font-family: Open Sans;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.my-masonry-grid {
+  display: -webkit-box; /* Not needed if autoprefixing */
+  display: -ms-flexbox; /* Not needed if autoprefixing */
+  display: flex;
+  margin-left: -30px; /* gutter size offset */
+  width: auto;
+}
+.my-masonry-grid_column {
+  padding-left: 30px; /* gutter size */
+  background-clip: padding-box;
+}
+
+/* Style your items */
+.my-masonry-grid_column > div {
+  /* change div to reference your elements you put in <Masonry> */
+  background: grey;
+  margin-bottom: 30px;
+}
+
+.slick-list {
+  margin: 0 -5px;
+}
+.slick-slide > div {
+  padding: 0 5px;
+  /* margin: 0 20px; */
+}
+
+/* .slick-current{
+  background:#1b2430;
+  color: #fff;
+} */
+
+.slick-current > div > div {
+  background: #1b2430;
+  color: #fff;
 }
