refactor: :lipstick: refactor ui

--- a/app/javascript/components/header.module.scss
+++ b/app/javascript/components/header.module.scss
@@ -28,6 +28,7 @@ header {
       padding: 0.5rem 1rem;
       border-radius: 0.4rem;
       font-weight: 500;
+      font-family: 'Lora rev=1', Helvetica, serif;
 
       &:hover {
         // background: #202142;
