--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  */
+@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 
 html {
   font-size: 12px;
@@ -20,7 +21,7 @@ html {
 
 body {
   background: #fff;
-  font-family: Helvetica;
+  font-family: 'Lora', Helvetica, serif;
   color: #020508;
 }
 
@@ -35,7 +36,6 @@ input[type='submit'] {
   box-sizing: border-box;
   list-style-type: none;
   transition: ease 0.3s;
-  font-family: Open Sans;
 }
 
 ul {
