--- a/app/javascript/pages/projects/project-card.module.scss
+++ b/app/javascript/pages/projects/project-card.module.scss
@@ -16,7 +16,7 @@ $color_3: rgb(250, 250, 250);
   display: flex;
   transition: all 0.3s;
   flex-flow: column nowrap;
-  background: #ffcc01;
+  background: rgb(255, 153, 1) none repeat scroll 0% 0% / auto padding-box border-box;
 
   &:hover {
     box-shadow: 2px 4px 9px #cbc6c6;
