header links ui

--- a/app/javascript/components/header.module.scss
+++ b/app/javascript/components/header.module.scss
@@ -46,6 +46,10 @@ header {
       font-size: 2.8rem;
     }
 
+    .icon_btn {
+      color: #202142;
+    }
+
     .logout {
       background: #202142;
       color: $color_2;
