--- a/app/javascript/pages/projects/project-card.module.scss
+++ b/app/javascript/pages/projects/project-card.module.scss
@@ -1,11 +1,315 @@
+$color_1: rgb(35, 35, 35);
+$color_2: rgb(0, 0, 0);
+$color_3: rgb(250, 250, 250);
+
 .project {
   margin: 20px;
-  height: 553px;
+  // height: 553px;
   width: 400px;
   display: relative;
   box-shadow: 0px 3px 6px #cbc6c6;
+
+  position: relative;
+  border-radius: 2rem;
+  padding: 2rem;
+  // height: 100%;
+  display: flex;
+  transition: all 0.3s;
+  flex-flow: column nowrap;
+  background: rgb(255, 153, 1) none repeat scroll 0% 0% / auto padding-box border-box;
+
   &:hover {
     box-shadow: 2px 4px 9px #cbc6c6;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+      rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+      rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  }
+
+  .header {
+    .author {
+      text-align: center;
+      color: #121212;
+      font-family: 'Inter', sans-serif;
+      font-size: 1.2rem;
+      line-height: 1.5;
+      word-break: break-word;
+      word-wrap: break-word;
+      font-weight: 400;
+      margin-bottom: 0.25rem !important;
+      .avatar {
+        height: 24px;
+        width: 25px;
+        border-radius: 100%;
+        margin-right: 10px;
+        margin-bottom: -8px;
+      }
+    }
+    .title {
+      text-align: center;
+      color: #121212;
+      font-family: 'Inter', sans-serif;
+      font-size: 2.2rem;
+      line-height: 1.2;
+      margin-bottom: 2rem !important;
+
+      word-break: break-word;
+      word-wrap: break-word;
+      font-weight: 400;
+
+      // ellipses
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 391px;
+      white-space: nowrap;
+    }
+  }
+
+  .project_image {
+    img {
+      width: 100%;
+      height: 350px;
+      object-fit: cover;
+      border-radius: 1rem;
+    }
+  }
+
+  .footer {
+    .eye {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 1rem !important;
+
+      .btn {
+        align-items: center;
+        block-size: 51.9922px;
+        border-block-end-color: rgb(0, 0, 0);
+        border-block-end-style: solid;
+        border-block-end-width: 2px;
+        border-block-start-color: rgb(0, 0, 0);
+        border-block-start-style: solid;
+        border-block-start-width: 2px;
+        border-end-end-radius: 100px;
+        border-end-start-radius: 100px;
+        border-inline-end-color: rgb(0, 0, 0);
+        border-inline-end-style: solid;
+        border-inline-end-width: 2px;
+        border-inline-start-color: rgb(0, 0, 0);
+        border-inline-start-style: solid;
+        border-inline-start-width: 2px;
+        border-start-end-radius: 100px;
+        border-start-start-radius: 100px;
+        box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 2px 0px;
+        box-sizing: border-box;
+        caret-color: rgb(0, 0, 0);
+        color: $color_2;
+        column-rule-color: rgb(0, 0, 0);
+        display: inline-flex;
+        height: 51.9922px;
+        inline-size: 185.82px;
+        justify-content: center;
+        margin-block-end: 9.6px;
+        margin-block-start: 9.6px;
+        margin-inline-end: 9.6px;
+        margin-inline-start: 9.6px;
+        overflow-wrap: break-word;
+        padding-block-end: 9.6px;
+        padding-block-start: 9.6px;
+        padding-inline-end: 19.2px;
+        padding-inline-start: 19.2px;
+        perspective-origin: 92.9062px 25.9922px;
+        text-align: center;
+        text-decoration: none solid rgb(0, 0, 0);
+        text-emphasis-color: rgb(0, 0, 0);
+        text-size-adjust: 100%;
+        transform-origin: 92.9102px 25.9961px;
+        user-select: none;
+        vertical-align: middle;
+        width: 185.82px;
+        word-break: break-word;
+        background: rgb(250, 250, 250) none repeat scroll 0% 0% / auto padding-box border-box;
+        border: 2px solid rgb(0, 0, 0);
+        border-radius: 100px;
+        font: 500 19.2px / 28.8px Inter, sans-serif;
+        margin: 9.6px;
+        outline: rgb(0, 0, 0) none 0px;
+        padding: 9.6px 19.2px;
+        transition: all 0.2s ease-in-out 0s;
+        &:after {
+          border-block-end-color: rgb(0, 0, 0);
+          border-block-start-color: rgb(0, 0, 0);
+          border-inline-end-color: rgb(0, 0, 0);
+          border-inline-start-color: rgb(0, 0, 0);
+          box-sizing: border-box;
+          caret-color: rgb(0, 0, 0);
+          color: $color_2;
+          column-rule-color: rgb(0, 0, 0);
+          display: block;
+          overflow-wrap: break-word;
+          text-align: center;
+          text-decoration: none solid rgb(0, 0, 0);
+          text-emphasis-color: rgb(0, 0, 0);
+          text-size-adjust: 100%;
+          user-select: none;
+          word-break: break-word;
+          border: 0px none rgb(0, 0, 0);
+          font: 500 19.2px / 28.8px Inter, sans-serif;
+          outline: rgb(0, 0, 0) none 0px;
+        }
+        &:before {
+          border-block-end-color: rgb(0, 0, 0);
+          border-block-start-color: rgb(0, 0, 0);
+          border-inline-end-color: rgb(0, 0, 0);
+          border-inline-start-color: rgb(0, 0, 0);
+          box-sizing: border-box;
+          caret-color: rgb(0, 0, 0);
+          color: $color_2;
+          column-rule-color: rgb(0, 0, 0);
+          display: block;
+          overflow-wrap: break-word;
+          text-align: center;
+          text-decoration: none solid rgb(0, 0, 0);
+          text-emphasis-color: rgb(0, 0, 0);
+          text-size-adjust: 100%;
+          user-select: none;
+          word-break: break-word;
+          border: 0px none rgb(0, 0, 0);
+          font: 500 19.2px / 28.8px Inter, sans-serif;
+          outline: rgb(0, 0, 0) none 0px;
+        }
+        .btn_icon {
+          font-size: 3.2rem;
+        }
+        .icon {
+          block-size: 28.7969px;
+          border-block-end-color: rgb(250, 250, 250);
+          border-block-start-color: rgb(250, 250, 250);
+          border-end-end-radius: 50%;
+          border-end-start-radius: 50%;
+          border-inline-end-color: rgb(250, 250, 250);
+          border-inline-start-color: rgb(250, 250, 250);
+          border-start-end-radius: 50%;
+          border-start-start-radius: 50%;
+          box-sizing: border-box;
+          caret-color: rgb(250, 250, 250);
+          color: $color_3;
+          column-rule-color: rgb(250, 250, 250);
+          cursor: pointer;
+          display: block;
+          height: 28.7969px;
+          inline-size: 28.8047px;
+          margin-inline-start: 8px;
+          min-block-size: auto;
+          min-height: auto;
+          min-inline-size: auto;
+          min-width: auto;
+          order: 1;
+          overflow-wrap: break-word;
+          padding-block-end: 8px;
+          padding-block-start: 8px;
+          padding-inline-end: 8px;
+          padding-inline-start: 8px;
+          perspective-origin: 14.3984px 14.3984px;
+          speak: none;
+          text-align: center;
+          text-decoration: none solid rgb(250, 250, 250);
+          text-emphasis-color: rgb(250, 250, 250);
+          text-size-adjust: 100%;
+          transform-origin: 14.4023px 14.3984px;
+          user-select: none;
+          vertical-align: sub;
+          width: 28.8047px;
+          word-break: break-word;
+          background: rgb(0, 0, 0) none repeat scroll 0% 0% / auto padding-box border-box;
+          border: 0px none rgb(250, 250, 250);
+          border-radius: 50%;
+          font: 700 12.8px / 12.8px Moririse2;
+          margin: 0px 0px 0px 8px;
+          outline: rgb(250, 250, 250) none 0px;
+          // padding: 8px;
+          transition: all 0.3s ease 0s;
+          &:after {
+            border-block-end-color: rgb(250, 250, 250);
+            border-block-start-color: rgb(250, 250, 250);
+            border-inline-end-color: rgb(250, 250, 250);
+            border-inline-start-color: rgb(250, 250, 250);
+            box-sizing: border-box;
+            caret-color: rgb(250, 250, 250);
+            color: $color_3;
+            column-rule-color: rgb(250, 250, 250);
+            cursor: pointer;
+            overflow-wrap: break-word;
+            speak: none;
+            text-align: center;
+            text-decoration: none solid rgb(250, 250, 250);
+            text-emphasis-color: rgb(250, 250, 250);
+            text-size-adjust: 100%;
+            user-select: none;
+            word-break: break-word;
+            border: 0px none rgb(250, 250, 250);
+            font: 700 12.8px / 12.8px Moririse2;
+            outline: rgb(250, 250, 250) none 0px;
+          }
+          &:before {
+            block-size: 12.7969px;
+            border-block-end-color: rgb(250, 250, 250);
+            border-block-start-color: rgb(250, 250, 250);
+            border-inline-end-color: rgb(250, 250, 250);
+            border-inline-start-color: rgb(250, 250, 250);
+            box-sizing: border-box;
+            caret-color: rgb(250, 250, 250);
+            color: $color_3;
+            column-rule-color: rgb(250, 250, 250);
+            // content: '""';
+            cursor: pointer;
+            display: block;
+            height: 12.7969px;
+            inline-size: 12.8047px;
+            overflow-wrap: break-word;
+            perspective-origin: 6.39844px 6.39844px;
+            speak: none;
+            text-align: center;
+            text-decoration: none solid rgb(250, 250, 250);
+            text-emphasis-color: rgb(250, 250, 250);
+            text-size-adjust: 100%;
+            transform: matrix(1, 0, 0, 1, 1, 0);
+            transform-origin: 6.40234px 6.39844px;
+            user-select: none;
+            width: 12.8047px;
+            word-break: break-word;
+            border: 0px none rgb(250, 250, 250);
+            font: 700 12.8px / 12.8px Moririse2;
+            outline: rgb(250, 250, 250) none 0px;
+          }
+        }
+      }
+      .btn {
+        margin-left: -0.6rem;
+        margin-right: -0.6rem;
+      }
+
+      .funded {
+        color: #121212;
+        font-family: 'Inter', sans-serif;
+        font-size: 2.2rem;
+        line-height: 1.2;
+        text-align: right;
+        word-break: break-word;
+        word-wrap: break-word;
+        font-weight: 400;
+        margin-bottom: 0 !important;
+      }
+    }
+
+    .computes {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 1rem !important;
+      .chip {
+        text-decoration: none;
+      }
+    }
   }
 
   .description {
@@ -37,14 +341,6 @@
       font-size: 16px;
       margin: 18px 0;
       font-weight: 100;
-
-      .avatar {
-        height: 24px;
-        width: 25px;
-        border-radius: 100%;
-        margin-right: 10px;
-        margin-bottom: -8px;
-      }
     }
 
     .pledged {
@@ -68,7 +364,7 @@
 @media screen and (min-width: 1301px) and (max-width: 1905px) {
   .project {
     margin: 20px;
-    height: 553px;
+    // height: 553px;
     width: 400px;
     display: relative;
     box-shadow: 0px 3px 6px #cbc6c6;
@@ -95,7 +391,7 @@
 @media screen and (max-width: 1481px) {
   .project {
     margin: 20px;
-    height: 553px;
+    // height: 553px;
     width: 356px;
     display: relative;
     box-shadow: 0px 3px 6px #cbc6c6;
