--- a/app/javascript/pages/errors/error.module.scss
+++ b/app/javascript/pages/errors/error.module.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 $anims: float, floatReverse, float2, floatReverse2;
 $easeSmooth: cubic-bezier(0.39, 0.575, 0.28, 0.995);
 $color: #595959;
@@ -62,8 +64,8 @@ $color: #595959;
         $delay: random(10) * 0.1;
         $anim: nth($anims, random(length($anims)));
 
-        top: random(100) / (100 + $size/8) * 100%;
-        left: random(100) / (100 + $size/10) * 100%;
+        top: math.percentage(math.div(random(100), (100 + math.div($size, 8))));
+        left: math.percentage(math.div(random(100), (100 + math.div($size, 10))));
         font-size: $size + px;
         filter: blur((#{$blur}) + px);
         animation: $speed + s $anim infinite;
