--- a/app/javascript/components/logo/logo.module.scss
+++ b/app/javascript/components/logo/logo.module.scss
@@ -44,6 +44,7 @@
         //   width: 450px;
         //   height: 450px;
         top: 35px;
+        top: 28px;
         width: 58px;
         height: 54px;
         background: #17141d;
