--- a/app/javascript/pages/users/signin.module.scss
+++ b/app/javascript/pages/users/signin.module.scss
@@ -72,13 +72,11 @@
 
         .social_container {
           margin: 50px 0;
+          display: inline-flex;
+          justify-content: center;
+          align-items: center;
 
-          a {
-            border: 1px solid #dddddd;
-            border-radius: 50%;
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
+          .social {
             margin: 0 5px;
             height: 40px;
             width: 40px;
