--- a/app/javascript/features/home/how-it-works/how-it-works.module.scss
+++ b/app/javascript/features/home/how-it-works/how-it-works.module.scss
@@ -5,7 +5,7 @@ $color_2: rgb(45, 57, 84);
 .section {
   // max-width: 1400px;
   // margin: 0 auto;
-  padding: 10rem 0rem;
+  padding: 5rem 0rem;
 
   // background: #e5eafe;
   padding-left: 13rem;
@@ -173,11 +173,11 @@ $color_2: rgb(45, 57, 84);
             color: rgb(255, 153, 1);
           }
 
-          h2 {
+          .h2 {
             color: #1d216b;
             font-size: 4.5rem;
           }
-          h5 {
+          .h5 {
             color: #2a2a6c;
             font-size: 1.5rem;
           }
