feat: :sparkles: add rewards to project

--- a/app/javascript/pages/project/new-project.module.scss
+++ b/app/javascript/pages/project/new-project.module.scss
@@ -179,5 +179,14 @@
     }
     .validate_form {
     }
+
+    .rewards {
+      display: flex;
+      flex-direction: column;
+      .reward {
+        display: flex;
+        flex-direction: row;
+      }
+    }
   }
 }
