chore: :recycle: remove unused

--- a/app/javascript/features/home/hero/hero.module.scss
+++ b/app/javascript/features/home/hero/hero.module.scss
@@ -8,8 +8,8 @@ $color_3: rgb(250, 250, 250);
 
   .container {
     max-width: 1400px;
-    margin-right: auto;
-    margin-left: auto;
+
+    margin: 0 auto;
     width: 100%;
     padding: 0 2rem !important;
     overflow-wrap: break-word;
