--- a/app/javascript/pages/project/project-details.module.scss
+++ b/app/javascript/pages/project/project-details.module.scss
@@ -1,83 +1,12 @@
-.bg_white {
-  background: #f8f8f9 !important;
-}
-
-.f_image {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 540px;
-  flex: 0 0 540px;
-  margin-top: 0 !important;
-
-  padding: 0 35px;
-  height: 300px;
-
-  .image {
-    max-width: 100%;
-    height: auto;
-  }
-}
-
-.contribute {
-  font-family: 'Montserrat';
-  display: inline-block;
-  height: 42px;
-  padding: 0 30px;
-  text-align: center;
-  font-size: 12px;
-  font-weight: 600;
-  line-height: 40px;
-  letter-spacing: 2px;
-  margin: 20px 0;
-  text-transform: uppercase;
-  text-decoration: none !important;
-  white-space: nowrap;
-  cursor: pointer;
-  background-color: transparent;
-  background: #1e266d;
-  color: #ffffff;
-  border: 1px solid #1e266d;
-  border-radius: 50px;
-  -webkit-transition: 0.2s;
-  -moz-transition: 0.2s;
-  transition: 0.2s;
-
-  margin: 20px 0 0 0;
-}
-
-.subtitle {
-  font-size: 13px !important;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  color: #607d9c;
-  line-height: 1.3;
-}
-.title {
-  font-weight: 600;
-  color: #445555;
-  line-height: 1.4;
-  font-size: 30px !important;
-}
-
-.description {
-  letter-spacing: 0.01em;
-  color: #818198;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  font-size: 17px !important;
-  font-weight: 400 !important;
-  color: rgba(0, 0, 0, 0.5);
-  line-height: 1.6;
-  margin-top: 20px;
-}
-.ft_single {
-  position: relative;
-  padding: 100px 0 100px 0;
-  background: #1e266d;
-  display: flex;
-  justify-content: center;
+.section {
+  // padding: 48px 0px 48px;
   .container {
-    max-width: 1140px;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 100px 60px;
+
+    display: flex;
+    justify-content: center;
     .yd_flex {
       position: relative;
       display: -webkit-box;
@@ -154,15 +83,13 @@
         order: 1;
 
         -webkit-box-flex: 0;
-        -ms-flex: 0 0 568px;
-        flex: 0 0 568px;
+        -ms-flex: 0 0 50%;
+        flex: 0 0 50%;
 
         .flex_main {
           display: flex;
           flex-wrap: wrap;
           justify-content: center;
-
-          display: flex;
 
           .flex_sub {
             align-items: center;
@@ -217,4 +144,80 @@
       }
     }
   }
+}
+.bg_blue {
+  background: #1e266d !important;
+}
+
+.bg_white {
+  background: #f8f8f9 !important;
+}
+
+.f_image {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 540px;
+  flex: 0 0 540px;
+  margin-top: 0 !important;
+
+  padding: 0 35px;
+  height: 300px;
+
+  .image {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+.contribute {
+  font-family: 'Montserrat';
+  display: inline-block;
+  height: 42px;
+  padding: 0 30px;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 40px;
+  letter-spacing: 2px;
+  margin: 20px 0;
+  text-transform: uppercase;
+  text-decoration: none !important;
+  white-space: nowrap;
+  cursor: pointer;
+  background-color: transparent;
+  background: #1e266d;
+  color: #ffffff;
+  border: 1px solid #1e266d;
+  border-radius: 50px;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  transition: 0.2s;
+
+  margin: 20px 0 0 0;
+}
+
+.subtitle {
+  font-size: 13px !important;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #607d9c;
+  line-height: 1.3;
+}
+.title {
+  font-weight: 600;
+  color: #445555;
+  line-height: 1.4;
+  font-size: 30px !important;
+}
+
+.description {
+  letter-spacing: 0.01em;
+  color: #818198;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  font-size: 17px !important;
+  font-weight: 400 !important;
+  color: rgba(0, 0, 0, 0.5);
+  line-height: 1.6;
+  margin-top: 20px;
 }
