--- a/app/javascript/pages/projects/projects.module.scss
+++ b/app/javascript/pages/projects/projects.module.scss
@@ -1,6 +1,7 @@
 .section {
   .categories {
-    padding: 3rem;
+    width: calc(100% - 120px);
+    max-width: 1400px;
   }
   .container {
     max-width: 1400px;
