--- a/app/javascript/components/Button/button.module.scss
+++ b/app/javascript/components/Button/button.module.scss
@@ -20,7 +20,7 @@ $color_3: rgb(250, 250, 250);
   transform-origin: 92.9102px 25.9961px;
   user-select: none;
   vertical-align: middle;
-  width: 185.82px;
+  max-width: 185.82px;
   word-break: break-word;
   background: rgb(250, 250, 250) none repeat scroll 0% 0% / auto padding-box border-box;
   border: 2px solid rgb(0, 0, 0);
@@ -123,4 +123,8 @@ $color_3: rgb(250, 250, 250);
       outline: rgb(250, 250, 250) none 0px;
     }
   }
+}
+
+.primary {
+  background: rgb(255, 153, 1) none repeat scroll 0% 0% / auto padding-box border-box;
 }
